# CMPE380

./: .gitignore  CMakeLists.txt
Lab02/: CMakeLists.txt  DynamicArrays.c  simpleTest
Lab02/exercise/: exercise.txt  lab_a  lab_b  lab_b.c  lab_c  lab_c.c
Lab03/: CMakeLists.txt  DynamicArrays.c  TestDarray  TestDarray.c  analysis.txt  mem1.txt  mem2.txt  mem_doubling_capacity.txt  out.txt  test2
Lab03/exercise/: .gitignore  CMakeLists.txt  exercise.txt  lab_b.c  lab_b.txt  lab_c.c  lab_c.txt  (+4 more)
Lab04/: CMakeLists.txt  LinkedLists.c  analysis.txt  mem.txt  simpleTest.c
Lab05/: DynamicArrays.c  LinkedLists.c  Makefile  TestSearch  analysis.txt
Lab06/: CMakeLists.txt  Makefile  Timers.h  analysis.txt  hw6c  hw6c.c  hw6cpp  hw6cpp.cpp  out.txt  run_all.sh
Lab07/: CMakeLists.txt  Makefile  analysis.txt  eqn2solve.c  hw7  hw7.c  out.txt  prelab.txt  rootfinding.c  rootfinding.h  timing_O1.txt  timing_O2.txt  timing_O3.txt
Lab08/: Makefile  Timers.h  analysis.txt  hw8c  hw8c.c  hw8c_0  hw8c_2  hw8c_3  hw8c_mem  hw8c_opt1  hw8c_opt1.c  hw8c_opt1_0  hw8c_opt1_2  hw8c_opt1_3  hw8c_opt1_mem  hw8c_opt2  hw8c_opt2.c  hw8c_opt2_0  hw8c_opt2_2  hw8c_opt2_3  hw8c_opt2_mem  hw8c_opt3  hw8c_opt3.c  hw8c_opt3_0  hw8c_opt3_2  hw8c_opt3_3  hw8c_opt3_mem  mem.txt  opt_with_malloc.txt  out.txt
Lab08/exercise/: CMakeLists.txt  Makefile  exercise.txt  lab_a  lab_a.c  lab_c  lab_c.c  lab_d  lab_d.c
Lab09/: CMakeLists.txt  Makefile  analysis.txt  mem.txt  out.txt  out_O0.txt  out_O1.txt  out_O3.txt  quadTest  quadTest.c  rootfinding.h  run_all_opts.sh
Lab10/: CMakeLists.txt  Makefile  analysis.txt  bisection.c  find_best.py  intTest  intTest.c  intTest_mem  rootfinding.h  verbose_qn_finding.txt
Lab11/: CMakeLists.txt  DynamicArrays.c  DynamicArrays.h  Makefile  alldata.txt  analysis.txt  correction  correction.c  correction.txt  hw11  hw11.c  mem.txt
Lab11/exercise/: exercise.txt  lab_b.c
Lab11/prelab/: lab_a  lab_a.c
Lab12/: 71  CMakeLists.txt  Makefile  hw12  hw12.c  mem.txt  out.txt
Lab13/: CMakeLists.txt  Makefile  Timers.h  hw13  hw13.c  mem.txt  out.txt
Lab13/exercise/: exercise.txt  lab_a  lab_a.c  lab_b  lab_b.c  lab_c  lab_c.c  lab_d  lab_d.c
Lab14/: CMakeLists.txt  ClassErrors.h  Makefile  ODEsolvers.c  ODEsolvers.h  analysis.txt  damp.sim  diff.sim  hw14  hw14.c  mem.txt  s1.sim  s2.sim  s3.sim  s4.sim  simulations.c  spring.sim  t1.sim  t2.sim  t3.sim  t4.sim  tank.sim
(+63 files in other folders)
